recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:15: error: not found: value steps
subtree(steps,length,angle,shrink) 
        ^Tree:15: error: not found: value length
subtree(steps,length,angle,shrink) 
              ^Tree:15: error: not found: value angle
subtree(steps,length,angle,shrink) 
                     ^Tree:15: error: not found: value shrink
subtree(steps,length,angle,shrink) 
                           ^